--- a/changelog.txt
+++ b/changelog.txt
@@ -1,13 +1,42 @@
-changelog of the toolbox_skeleton
+Changelog
+---------
+Version 0.3 (July 8, 2019)
+	The toolbox has been available on Scilab 6.0.x
+	Upgraded solver libraries to their latest version and added the following     
+ 	functions:	
+	*qcqp
+	*quadprogCLP
+	Changes to help files
+	"_gradhess" in intfmincon has been improved
+	
+	
 
-Please update this file to describe the modifications of your toolbox
+Version 0.2.3 (December 11, 2018)
 
-A format of change log could be:
+  Edits in quadprog help file
+  Restructured the linprog lambda parameter
+  Reduced size of source and all binaries
 
+Version 0.2.2 (July 27, 2018)
 
-toolbox_skeleton (version)
-    * Change 1 
-    * Change 2
-    * ...
- -- Author <author@email.com>  Tue, 18 Dec 2007 14:50:02 +0100
+  Reduced the size of the source code and binaries
 
+Version 0.2.1 (July 20, 2018)
+
+  Changed names of the following functions:
+    *cbcintlinprog => intlinprog
+    *intqpipopt => intquadprog
+    *qpipopt => quadprog
+    *qpipoptmat => quadprogmat
+ 				
+Version 0.2 (July 5, 2018)
+
+  Upgraded solver libraries to their latest version and added the following     
+ functions:
+    *cbcintlinprog 				
+    *fotversion
+    *intfminbnd
+    *intfmincon
+    *intfminimax
+    *intfminunc
+    *intqpipopt   
